# second-reading

./: .gitignore  README.md  package-lock.json  package.json
astro/: README.md  astro.config.mjs  package.json  tailwind.config.mjs  wrangler.jsonc
astro/src/components/: AISummaryCard.astro  AttendanceDotGrid.astro  Avatar.astro  BillCard.astro  BillReadingStatus.astro  MemberCard.astro  Navbar.astro  PaginatedList.astro  Pagination.astro  QuestionCard.astro  SearchFilter.astro  SectionCard.astro  SessionCard.astro  SittingCard.astro  TranscriptDialogue.astro  TypeBadge.astro
astro/src/layouts/: Layout.astro  NewspaperLayout.astro
astro/src/lib/: db.ts  types.ts
astro/src/pages/: about.astro  budgets.astro  index.astro
astro/src/styles/: global.css
launchd/: com.secondreading.daily.plist
python/: README.md  batch_process.py  batch_process_sqlite.py  cleanup_duplicates.py  cleanup_duplicates_sqlite.py  db.py  db_async.py  db_sqlite.py  generate_summaries.py  generate_summaries_sqlite.py  hansard_api.py  inspect_bill_duplicates.py  inspect_duplicates.py  merge_bills.py  parliament_session.py  parliament_sitting.py  process_hansard.py  prompts.py  pyproject.toml  schema.sql  summarizer.py  util.py
scripts/: daily_pipeline.sh
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AISummaryCard.tsx  BillCard.tsx  MemberCard.tsx  Navbar.tsx  QuestionCard.tsx  QuestionFilters.tsx  ServerPagination.tsx
src/lib/: db.ts  supabase.ts
src/types/: index.ts
supabase/: schema.sql
supabase/migrations/: create_member_list_view.sql
(+51 files in other folders)
